# SOINGLBOAL_AI

./: README.md  pyproject.toml  report.md  requirements.txt
api/: index.py
src/: api.py
src/soinglobal_smartai/: crew.py  main.py  streamlit_app.py  telegram_promoter_chatbot.py
src/soinglobal_smartai/config/: agents.yaml  tasks.yaml
src/soinglobal_smartai/tools/: enhanced_telegram_dex_tool.py  telegram_dex_query_tool.py  top_telegram_promoters.py
